<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".professor.NuevoFinalActivity"
    tools:showIn="@layout/activity_profesor_nuevo_final">

    <Button
        android:id="@+id/selectDate"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_weight="1"
        android:background="@color/grayBlue"
        android:onClick="selectDateButtonPressed"
        android:text="@string/boton_seleccionar_fecha_coloquio"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/selectTimeStart"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:background="@color/grayBlue"
        android:onClick="selectTimeButtonPressed"
        android:text="@string/boton_seleccionar_hora_inicio_final"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selectDate" />

    <Button
        android:id="@+id/selectTimeEnd"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:background="@color/grayBlue"
        android:onClick="selectTimeButtonPressed"
        android:text="@string/boton_seleccionar_hora_finalizacion_coloquio"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/selectTimeStart" />

</android.support.constraint.ConstraintLayout>